# gulliant-primitive

./: .gitignore  Cargo.toml  LICENSE  README.md
demo/naive-transfer/: README.md
demo/naive-transfer/client/: Cargo.toml
demo/naive-transfer/client/src/: main.rs
demo/naive-transfer/program/: Cargo.toml
demo/naive-transfer/program/src/: lib.rs
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
tests/: integration.rs
