[package]
name = "gulliant-v1"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18"
borsh = { version = "1.5", features = ["derive"] }
sha2 = "0.10"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }